# py_jenkins_demo

./: Jenkinsfile  Pipfile  setup.cfg  setup.py
py_jenkins_demo/: sample.py
test/: runner.py  test_sample.py
