[metadata]
name = py_jenkins_demo 
version = 1
description = py-jenkins-demo
license = BSD 3-Clause License
classifiers =
    Framework :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
